--- a/WebApplication1/Views/Home/AjouterCamion.cshtml
+++ b/WebApplication1/Views/Home/AjouterCamion.cshtml
@@ -11,17 +11,21 @@
     <h1 class="display-4">Ajouter un Camion:</h1>
     <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="AjouterCamion">
         <div class="form-group mb-3">
-            <label for="Immatriculation">Plaque d'immatriculation</label>
-            <input asp-for="Immatriculation" type="text" class="form-control" id="immat" placeholder="Immatriculation">
-        </div>
+                    <label for="Immatriculation">Plaque d'immatriculation</label>
+                    <input asp-for="Immatriculation" type="text" class="form-control" id="immat" placeholder="Immatriculation">
+                    <span asp-validation-for="Immatriculation" class="text-danger"></span>
+                </div>
         <div class="form-group mb-3">
             <label for="Modele">Modèle</label>
             <input asp-for="Modele"type="text" class="form-control" id="Modele" placeholder="Modele">
         </div>
         <div class="form-group mb-3">
-            <label for="Marque">Marque</label>
-            <input asp-for="Marque" type="text" class="form-control" id="marque" placeholder="Marque">
-            </div>
+            <label asp-for="Marque">Marque</label>
+            <select asp-for="Marque" asp-items="Html.GetEnumSelectList<Camion.MarqueCamion>()" class="form-control">
+            </select>
+            <span asp-validation-for="Marque" class="text-danger"></span>
+        </div>
+
         <div class="form-group mb-3">
             <label for="Tonnage">Tonnage Max</label>
             <input asp-for="Tonnage" type="text" class="form-control" id="Tonnage" placeholder="Tonnage">
