Mise en place validation livraison et affichage livraison pour chauffeur

--- a/WebApplication1/Views/Home/LivraisonDispatch.cshtml
+++ b/WebApplication1/Views/Home/LivraisonDispatch.cshtml
@@ -1,40 +1,34 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @attribute [Authorize(Roles = "Chauffeur")]
+@model List<Livraison>
 @{
     Layout = "_Layout";  
     ViewData["Title"] = "Livraison - Dispatch";
-    @model List<Livraison>
 }
 <div class="container">
     <div>
         <h1 class="display-4 me-4">Livraison:</h1>
     </div>
-    @RenderSection("ListLivraisonPerDate")
-
 </div>
 
-@section ListLivraisonPerDate{
-    @foreach (var date in "")
-    {
-        <div class="mb-4">
-            <h2>@date</h2>
-            <ul class="list-group">
-                @foreach (var livraisonADate in Model)/*toute les livraison à cette date*/
-                {
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        <div>
-                            <p class="font-weight-bold">Livraison @livraisonADate.ID</p>
-                            <p>@livraisonADate.LieuChargement à @livraisonADate.HeureDechargementPrevu</p>
-                        </div>
-                        <div>
-                            <a class="btn btn-success" asp-controller="Home" asp-action="ValiderLivraison">Valider</a>
-                            <a class="btn btn-danger" asp-controller="Home" asp-action="RaterLivraison">Rater</a>
-                        </div>
-                    </li>
-                }
-            </ul>
-        </div>
-    }
-    
+@foreach(var Livraison in Model){
+<div class="mb-4">
+    <h2>@Livraison.DateChargement</h2> 
+    <ul class="list-group">
+               
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+                <p class="font-weight-bold">Livraison @Livraison.ID</p>
+                <p>Lieu de chargement : @Livraison.LieuChargement</p> 
+                <p>Lieu de déchargement : @Livraison.LieuDechargement</p> 
+            </div>
+            <div>
+                <a class="btn btn-success" asp-controller="Home" asp-action="ValiderLivraison" asp-route-id="@Livraison.ID">Valider</a>
+                <a class="btn btn-danger" asp-controller="Home" asp-action="RaterLivraison">Rater</a>
+            </div>
+        </li>
+                
+    </ul>
+</div>
 }
