--- a/WebApplication1/Views/Home/ValiderLivraison.cshtml
+++ b/WebApplication1/Views/Home/ValiderLivraison.cshtml
@@ -9,14 +9,19 @@ ViewData["Title"] = "Valider la Livraison";
 <div class="container">
     <h1 class="display-4 me-4">Valider la Livraison @Model.ID:</h1>
     <h2>Livraison @Model.ID</h2>
-    <form>
+    <form enctype="multipart/form-data" asp-controller="Home" asp-action="ValiderLivraison" asp-route-id="@Model.ID" >
         <div class="mb-3">
-            <label for="dateChargementEf" class="form-label">Date de Chargement effectuée</label>
-            <input type="datetime-local" class="form-control" id="dateChargementEf" pattern="^([1-9]|([012][0-9])|(3[01]))\/([0]{0,1}[1-9]|1[012])\/\d\d\d\d\s-\s([0-1]?[0-9]|2?[0-3]):([0-5]\d)$">
+            <label for="dateDeChargementEf" class="form-label">Date de Chargement effectuée</label>
+            <input name="dateDeChargementEf" type="date" class="form-control" id="dateDeChargementEf" >
         </div>
         <div class="mb-3">
+            <label for="heureDeChargementEf" class="form-label">Heure de Chargement effectuée</label>
+            <input name="heureDeChargementEf" type="time" class="form-control" id="heureDeChargementEf" >
+            </div>
+        
+        <div class="mb-3">
             <label for="commentaire" class="form-label">Commentaire</label>
-            <textarea class="form-control" id="commentaire" rows="3"></textarea>
+            <textarea class="form-control" id="commentaire" name="commentaire" rows="3"></textarea>
         </div>
         <button class="btn btn-primary " type="submit">Valider la Livraison</button>
     </form>
