--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -10,14 +10,14 @@
         <img src="img/pexels-quintin-gellar-2199293.jpg" width="400" height="300" alt="flotte-camion">
         <div class="card-body d-flex flex-column align-items-start justify-content-center">
             <h3 class="card-title ">Notre Flotte</h3>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Notre flotte de véhicules de transport, composée de camions et de camionnettes, est robuste, fiable et adaptée aux besoins logistiques. Nous veillons à ce qu'ils soient bien entretenus pour assurer des livraisons efficaces et sécurisées à nos clients.</p>
         </div>
     </article>
     <article class="card flex-row-reverse mb-4">
         <img src="img/pexels-august-de-richelieu-4427430.jpg" width="400" height="300" alt="flotte-camion">
         <div class="card-body d-flex flex-column align-items-end justify-content-center">
             <h3 class="card-title ">Notre Équipe</h3>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Notre équipe de gestion de l'entreprise de livraison/transport comprend des planificateurs logistiques efficaces, des responsables des opérations, des conducteurs respectueux des réglementations, un service client dédié et des experts en logistique et en technologie. Nous nous engageons à offrir un service de qualité supérieure à nos clients grâce à notre détermination et notre expertise.</p>
         </div>
     </article>
     <article class="text-center">
