--- a/WebApplication1/Views/Home/Statistique.cshtml
+++ b/WebApplication1/Views/Home/Statistique.cshtml
@@ -3,7 +3,7 @@
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery csrf
 @functions{
 
-    public string GetAntiCsrfToken()
+    public string? GetAntiCsrfToken()
     {
         return csrf.GetAndStoreTokens(Context).RequestToken;
     }
@@ -16,17 +16,21 @@ ViewData["Title"] = "Statistiques";
 }
 <div class="container">
   <h1 class="display-4 me-4">Statistiques :</h1>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" id="SearchString" name="SearchString" placeholder="Hubert,Gare" aria-label="Hubert,Gare" aria-describedby="recherche">
-    <button class="btn btn-secondary" type="button" id="recherche">Recherche</button>
+  <div class="form mb-3">
+    <i class="bi bi-search"></i>
+    <form method="get" class="d-flex" asp-action="Statistique">
+      <input type="text" class="form-control form-input" id="SearchString" name="SearchString" placeholder="Hubert,Gare" aria-label="Hubert,Gare" aria-describedby="recherche">
+      <input type="submit" value="Recherche" class="btn btn-secondary form-input form-control"/>
+    </form>
   </div>
   <div class="mb-5">
     <table class="table table-striped">
       <thead>
       <tr>
-        <th id="client" class="btn-outline-dark" scope="col">Client</th>
-        <th id="date" class="btn-outline-dark" scope="col">Date</th>
-        <th id="chauffeur" class="btn-outline-dark" scope="col">Chauffeur</th>
+        <th id="client" class="btn-outline-dark colSort" scope="col">Client</th>
+        <th id="date" class="btn-outline-dark colSort" scope="col">Date</th>
+        <th id="chauffeur" class="btn-outline-dark colSort" scope="col">Chauffeur</th>
+        <th id="etat" class="btn-outline-dark colSort" scope="col">Etat</th>
       </tr>
       </thead>
       <tbody id="listToComplete">
@@ -40,19 +44,19 @@ ViewData["Title"] = "Statistiques";
   <script>
   
   class LivraisonModel{
-    constructor({client,date,chauffeur}={}) {
+    constructor({client,date,chauffeur,etat}={}) {
       this.client=client;
       this.date=date;
       this.chauffeur=chauffeur;
+      this.etat=etat;
     }
     static compare({prop='name',isAsc=true}){
                  return (a,b)=> (isAsc ?b[prop].localeCompare(a[prop]):a[prop].localeCompare(b[prop]));
          }
   }
-  //Attention si element null casse tout 
   let arrayLivraison = [
    @foreach (var livraison in Model)
-   {@: new LivraisonModel({ client: "@livraison.ClientLivraison.UserName", date: "@livraison.DateDechargement", chauffeur: "@livraison.ChauffeurLivraison.UserName" }),
+   {@: new LivraisonModel({ client: "@livraison.ClientLivraison.UserName", date: "@livraison.DateDechargement", chauffeur: "@livraison.ChauffeurLivraison.Prenom @livraison.ChauffeurLivraison.Nom",etat:"@livraison.StatutLivraison" }),
    }
     ];
   let sortArray=arrayLivraison;
