--- a/WebApplication1/Views/Home/GererLivraison.cshtml
+++ b/WebApplication1/Views/Home/GererLivraison.cshtml
@@ -19,17 +19,18 @@
 <div class="container">
     <h1 class="display-4 me-4">Gérer la Livraison @Model.Livraison:</h1>
     <h2>Chauffeur</h2>
-    <form>
+    <form enctype="multipart/form-data" asp-controller="Home" asp-action="AssignerChauffeurCamion">
+        <input name="livraisonId" id="livraisonId"  hidden value="@Model.Livraison"/>
         <div class="mb-2" id="formChauffeur">
-            <select class="form-select"  id="chauffeurSelect" name="chauffeurSelect" aria-label="Default select example">
+            <select class="form-select" id="chauffeurSelect" name="chauffeurSelect" aria-label="Default select example">
                 <option disabled selected hidden>Choissisez un Chauffeur</option>
                 @await Html.PartialAsync("ListElements/_AllChauffeurDispo", Model.ListChauffeur)
             </select>
         </div>
         <div id="formCamion">
             <h2>Camion</h2>
-            <div id="camionShow" >
-                
+            <div id="camionShow">
+
             </div>
         </div>
     </form>
@@ -52,9 +53,13 @@
                     headers: { 'RequestVerificationToken': token },
                     dataType: 'json',
                     success: function (response) {
+                        if (response.length===0){
+                            alert("Il n'y a pas de camions disponibles");
+                        }else{
                         let selectCamion=document.createElement("select");
                         selectCamion.className="form-select mb-2";
                         selectCamion.id = "camionSelect";
+                        selectCamion.name = "camionSelect";
                         let divShow=document.getElementById("camionShow");
                         divShow.innerHTML='';
                        divShow.appendChild(selectCamion);
@@ -64,7 +69,8 @@
                             optionNode.id = camion.id;
                             selectCamion.appendChild(optionNode);
                              divShow.appendChild(button);
-                    });},error:function() {
+                        
+                    });}},error:function() {
                     }
                 });
             });
