--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -93,9 +93,11 @@
             </div>
             @if (SignInManager.IsSignedIn(User))
             {
-                <li class="nav-item px-2">
-                    <a class="btn btn-secondary" asp-controller="Home" asp-action="Deconnexion">Deconnexion</a>
-                </li>
+                <ul class="navbar-nav">
+            <li class="nav-item px-2">
+                <a class="btn btn-secondary" asp-controller="Home" asp-action="Deconnexion">Deconnexion</a>
+            </li>
+            </ul>
             }
             else
             {
