--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -44,3 +44,8 @@ body {
 }
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown:hover .dropdownbtn{ background-color: #6c757d;}
+
+.colSort:hover{
+  background-color: #030303;
+  color: white;
+}
