--- a/WebApplication1/Views/Home/Statistique.cshtml
+++ b/WebApplication1/Views/Home/Statistique.cshtml
@@ -9,6 +9,7 @@
     }
 }
 <input type="hidden" id="RequestCsrfToken" name ="RequestCsrfToken" value="@GetAntiCsrfToken()"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 @{
 Layout = "_Layout";  
 ViewData["Title"] = "Statistiques";
@@ -16,11 +17,15 @@ ViewData["Title"] = "Statistiques";
 }
 <div class="container">
   <h1 class="display-4 me-4">Statistiques :</h1>
+  <div>
+  <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+    
+  </div>
   <div class="form mb-3">
-    <i class="bi bi-search"></i>
     <form method="get" class="d-flex" asp-action="Statistique">
+       <i class="bi-search h-100 mt-2 me-1"></i>
       <input type="text" class="form-control form-input" id="SearchString" name="SearchString" placeholder="Hubert,Gare" aria-label="Hubert,Gare" aria-describedby="recherche">
-      <input type="submit" value="Recherche" class="btn btn-secondary form-input form-control"/>
+      <input type="submit" value="Recherche" class="btn btn-secondary w-25 form-input form-control"/>
     </form>
   </div>
   <div class="mb-5">
@@ -107,4 +112,32 @@ ViewData["Title"] = "Statistiques";
     })
   }
 </script>
+  <script>
+  var xValues = ["Italy", "France", "Spain", "USA", "Argentina"];
+  var yValues = [55, 49, 44, 24, 15];
+  var barColors = [
+    "#b91d47",
+    "#00aba9",
+    "#2b5797",
+    "#e8c3b9",
+    "#1e7145"
+  ];
+  
+  new Chart("myChart", {
+    type: "pie",
+    data: {
+      labels: xValues,
+      datasets: [{
+        backgroundColor: barColors,
+        data: yValues
+      }]
+    },
+    options: {
+      title: {
+        display: true,
+        text: "World Wide Wine Production 2018"
+      }
+    }
+  });
+  </script>
 }
