--- a/WebApplication1/Views/Home/ModificationClient.cshtml
+++ b/WebApplication1/Views/Home/ModificationClient.cshtml
@@ -53,7 +53,7 @@
             </div>
             <div class="d-grid mb-3" >
                         <label for="logo">Image logo entreprise</label>
-                <input type="file" class="form-control-file" id="logo" name="logo">
+                <input type="file" class="form-control-file" id="logo" accept="image/jpeg" name="logo">
                 </div>
         </div>
     <button type="submit" class="btn btn-success">Ajouter</button>
