--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Microsoft.IdentityModel.Tokens
+@{
     Layout = "_Layout";     
     ViewData["Title"] = "Home Page";
     @model List<Client>
@@ -7,14 +8,14 @@
 <div class="container text-center">
     <h1 class="display-4">HELMo-bilité</h1>
     <article class="card flex-row mb-4">
-        <img src="img/pexels-quintin-gellar-2199293.jpg" width="400" height="300" alt="flotte-camion">
+        <img src="~/img/logo/pexels-quintin-gellar-2199293.jpg" width="400" height="300" alt="flotte-camion">
         <div class="card-body d-flex flex-column align-items-start justify-content-center">
             <h3 class="card-title ">Notre Flotte</h3>
             <p class="card-text">Notre flotte de véhicules de transport, composée de camions et de camionnettes, est robuste, fiable et adaptée aux besoins logistiques. Nous veillons à ce qu'ils soient bien entretenus pour assurer des livraisons efficaces et sécurisées à nos clients.</p>
         </div>
     </article>
     <article class="card flex-row-reverse mb-4">
-        <img src="img/pexels-august-de-richelieu-4427430.jpg" width="400" height="300" alt="flotte-camion">
+        <img src="~/img/logo/pexels-august-de-richelieu-4427430.jpg" width="400" height="300" alt="flotte-camion">
         <div class="card-body d-flex flex-column align-items-end justify-content-center">
             <h3 class="card-title ">Notre Équipe</h3>
             <p class="card-text">Notre équipe de gestion de l'entreprise de livraison/transport comprend des planificateurs logistiques efficaces, des responsables des opérations, des conducteurs respectueux des réglementations, un service client dédié et des experts en logistique et en technologie. Nous nous engageons à offrir un service de qualité supérieure à nos clients grâce à notre détermination et notre expertise.</p>
@@ -22,7 +23,12 @@
     </article>
     <article class="text-center">
         <h3 class="card-title ">Nos Partenaires</h3>
-        @await Html.PartialAsync("ListElements/_AllLogoClient", Model)
-        <img class="m-2" src="img/logo/cod-lab.png" width="100" height="100" alt="logoCodLab"/>
+        @foreach(Client client in Model)
+        {
+            if (!client.logo.IsNullOrEmpty())
+            {
+                <img class="m-2" src="@Url.Content(client.logo)" width="100" height="100" alt="@client.NomEntreprise"/>
+            }
+        }
     </article>
 </div>
