--- a/WebApplication1/Views/Home/Connexion.cshtml
+++ b/WebApplication1/Views/Home/Connexion.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <h1 class="display-4">Authentification:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="Connexion">
+    <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="Connexion">
         <div class="form-group mb-3">
                     <label for="email">Mail</label>
                     <input type="email" name="email" class="form-control" id="email" placeholder="email">
