--- a/WebApplication1/Views/Home/CreerLivraison.cshtml
+++ b/WebApplication1/Views/Home/CreerLivraison.cshtml
@@ -32,7 +32,7 @@
 }
 <div class="container">
     <h1 class="display-4 me-4">Création d'une Livraison:</h1>
-    <form enctype="multipart/form-data" asp-controller="Home" asp-action="CreerLivraison" >
+    <form enctype="multipart/form-data" asp-controller="Livraison" asp-action="CreerLivraison" >
         <div class="mb-3">
             <label for="lieuChargement" class="form-label">Lieu de Chargement</label>
             <input asp-for="LieuChargement" type="text" class="form-control" id="lieuChargment" >
