--- a/WebApplication1/Views/Home/InscriptionMembre.cshtml
+++ b/WebApplication1/Views/Home/InscriptionMembre.cshtml
@@ -19,7 +19,7 @@
 
 <div class="container">
     <h1 class="display-4">Inscription - Membre:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="InscriptionMembre" onsubmit="return checkPassword();">
+    <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="InscriptionMembre" onsubmit="return checkPassword();">
         <div class=" d-flex flex-column align-items-start ">
                 <label for="role_select">Votre Rôle</label>
                     <select name="role" id="role_select">
