--- a/WebApplication1/Views/Home/ModificationCamion.cshtml
+++ b/WebApplication1/Views/Home/ModificationCamion.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container">
     <h1 class="display-4">Modifier un Camion:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="ModificationCamion">
+    <form method="post" enctype="multipart/form-data" asp-controller="Admin" asp-action="ModificationCamion">
         <div class="form-group mb-3">
             <label for="Immatriculation">Plaque d'immatriculation</label>
             <input asp-for="Immatriculation" type="text" class="form-control" id="immat" placeholder="Immatriculation">
