--- a/WebApplication1/Views/Home/ModificationDispatcher.cshtml
+++ b/WebApplication1/Views/Home/ModificationDispatcher.cshtml
@@ -18,7 +18,7 @@
 }
 <div class="container">
     <h1 class="display-4">Modification - Dispatcher:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="ModificationDispatcher" onsubmit="return checkPassword();">
+    <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="ModificationDispatcher" onsubmit="return checkPassword();">
         <div class="form-group mb-3">
             <label for="matricule">Matricule</label>
             <input type="text" class="form-control" id="matricule" placeholder="Matricule" name="matricule">
