--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
             {
                 <ul class="navbar-nav">
             <li class="nav-item px-2">
-                <a class="btn btn-secondary" asp-controller="Home" asp-action="Deconnexion">Deconnexion</a>
+                <a class="btn btn-secondary" asp-controller="Home" asp-action="Deconnexion">Déconnexion</a>
             </li>
             </ul>
             }
