--- a/WebApplication1/wwwroot/css/site.css
+++ b/WebApplication1/wwwroot/css/site.css
@@ -17,7 +17,7 @@ body {
   margin-bottom: 60px;
 }
 /*Switch Red*/
-.form-check-input:checked {
+.red.form-check-input:checked {
   background-color: red;
   border-color: red;
 }
