--- a/WebApplication1/Views/Home/ModificationClient.cshtml
+++ b/WebApplication1/Views/Home/ModificationClient.cshtml
@@ -23,7 +23,7 @@
 
 <div class="container">
     <h1 class="display-4">Modification profil - Client:</h1>
-    <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="ModificationClient" onsubmit="return checkPassword();">
+    <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="ModificationClient" onsubmit="return checkPassword();">
         <div class="form-group mb-3">
             <label for="entrepriseName">Nom de L'entreprise</label>
             <input type="text" class="form-control" id="entrepriseName" placeholder="Nom de l'entreprise" name="entrepriseName">
