--- a/WebApplication1/Views/Home/ProfilChauffeur.cshtml
+++ b/WebApplication1/Views/Home/ProfilChauffeur.cshtml
@@ -26,6 +26,11 @@
         <label for="matricule">Matricule</label>
         <input asp-for="Matricule" type="text" class="form-control" id="matricule" readonly name="matricule">
     </div>
+     <label class="form-check-label">Permis</label>
+            <div><input class="form-check-input" name="divName" type="checkbox" value="B" id="permis" @(Model.PermisB ? "checked" : "")><label class="form-check-label ms-3" for="permis">Permis B</label></div>
+            <div><input class="form-check-input" name="divName" type="checkbox" value="C" id="permis" @(Model.PermisC ? "checked" : "")><label class="form-check-label ms-3" for="permis">Permis C</label></div>
+            <div><input class="form-check-input" name="divName" type="checkbox" value="CE" id="permis" @(Model.PermisCE ? "checked" : "")><label class="form-check-label ms-3" for="permis">Permis CE</label></div>
+             
     <div class="form-group mb-3">
             <label for="dateNaissance">Date de naissance</label>
         <input asp-for="DateNaissance" type="text" class="form-control" id="dateNaissance" readonly name="dateNaissance">
