--- a/WebApplication1/Views/Home/ModificationDispatcher.cshtml
+++ b/WebApplication1/Views/Home/ModificationDispatcher.cshtml
@@ -2,20 +2,6 @@
     Layout = "_Layout";  
     ViewData["Title"] = "Dispatcher Modification";
 }
-@section Scripts {
-    <script>
-        function checkPassword() {
-            var motDePasse = document.getElementById('passwordUser').value;
-            var motDePasseConfirm = document.getElementById('passwordUserConfirm').value;
-
-            if (motDePasse !== motDePasseConfirm) {
-                alert("Les mots de passe ne correspondent pas.");
-                return false;
-            }
-            return true;
-        }
-    </script>
-}
 <div class="container">
     <h1 class="display-4">Modification - Dispatcher:</h1>
     <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="ModificationDispatcher" onsubmit="return checkPassword();">
@@ -31,21 +17,6 @@
             </div>
         </div>
         <div class="form-group mb-3">
-            <label for="mail">Adresse Mail</label>
-            <input type="email" class="form-control" id="mail" placeholder="Adresse mail" name="email">
-        </div>
-        <div class="form-group mb-3">
-            <label for="passwordUser">Mot de passe</label>
-            <input type="password" class="form-control" id="passwordUser" placeholder="Mot de passe" name="passwordUser">
-        </div>
-        <div class="form-group mb-3">
-            <label for="passwordUserConfirm">Confirmation du mot de passe</label>
-            <input type="password" class="form-control" id="passwordUserConfirm" placeholder="Confirmation du mot de passe" name="passwordUserConfirm">
-        </div>
-        <div class="form-group mb-3" id="roleComplete">
-
-        </div>
-        <div class="form-group mb-3">
             <label for="birthdate">Date de Naissance</label>
             <input type="date" class="form-control" id="birthdate" placeholder="Date de naissance" name="dateNaissance">
         </div>
@@ -54,9 +25,9 @@
             <input type="file" class="form-control-file" id="profil" name="profil">
         </div>
         <label class="form-check-label"> Choissisez votre diplome de plus haut niveau</label>
-        <div><input class="form-check-input" name="divName" type="radio" value="CESS" id="diplome"><label class="form-check-label ms-3" for="diplome">CESS</label></div>
-        <div><input class="form-check-input" name="divName" type="radio" value="Bachelier" id="diplome"><label class="form-check-label ms-3" for="diplome">Bachelier</label></div>
-        <div><input class="form-check-input" name="divName" type="radio" value="Licencier" id="diplome"><label class="form-check-label ms-3" for="diplome">Licencier</label></div>
+        <div><input class="form-check-input" name="divName" type="radio" value="0" id="diplomeCESS"><label class="form-check-label ms-3" for="diplomeCESS">CESS</label></div>
+        <div><input class="form-check-input" name="divName" type="radio" value="1" id="diplomeBachelier"><label class="form-check-label ms-3" for="diplomeBachelier">Bachelier</label></div>
+        <div><input class="form-check-input" name="divName" type="radio" value="2" id="diplomeLicencier"><label class="form-check-label ms-3" for="diplomeLicencier">Licencier</label></div>
         <button type="submit" class="btn btn-primary">Confirmer</button>
     </form>
 </div>
