--- a/WebApplication1/Views/Home/InscriptionClient.cshtml
+++ b/WebApplication1/Views/Home/InscriptionClient.cshtml
@@ -23,7 +23,7 @@
     <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="InscriptionClient" onsubmit="return checkPassword();">
         <div class="form-group mb-3">
             <label for="entrepriseName">Nom de L'entreprise</label>
-            <input asp-for="NomEntreprise" type="text" class="form-control" id="entrepriseName" placeholder="Nom de l'entreprise" >
+            <input asp-for="NomEntreprise" type="text" class="form-control" id="entrepriseName" placeholder="Nom de l'entreprise sans espaces" >
         </div>
         <div class="form-group mb-3">
             <label for="email">Adresse Mail</label>
